<resources>
    <string name="app_name">FoodCalories</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="today_calor">Today Calories</string>
    <string name="kcal">kcal</string>
    <string name="you">You are doing Great</string>
    <string name="your_lastest_food">Your Lastest Food</string>
    <string name="foto_makanan">Foto Makanan</string>
    <string name="food">Food</string>
    <string name="_125_2000_kcal">+125 / 2000 Kcal</string>
    <string name="articles">Articles</string>
    <string name="articel_image">Article Image</string>
    <string name="apa_sih_kalori_dan_berapa_yang_kita_butuhkan">Apa Sih Kalori dan Berapa yang Kita Butuhkan?</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="add">Add</string>
    <string name="articles_title">Articles Title</string>
    <string name="articles_from">articles_from</string>
    <string name="article_image">Article Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="today_calorie">Today\'s Calorie Intake</string>
    <string name="calorie">0</string>
    <string name="your_latest_food">Your Latest Food</string>
    <string name="latest_food_calorie">0</string>
    <string name="food_image">Food image</string>

    <string name="capture_button_alt">Capture</string>
    <string name="unknown">UNKNOWN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pizza">Pizza</string>
    <string name="cal">140+</string>
    <string name="per">of</string>
    <string name="calorieTarget">2000</string>
    <string name="date">Today</string>
    <string name="permission_deny_text">Required permissions denied. Exiting.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="set_calorie_target">Set Calorie Target</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or">Or</string>
    <string name="sign_in">Sign In</string>
    <string name="base">Base</string>
    <string name="data_belum_ada">Data belum ada</string>

</resources>