<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

    <TextView
        android:id="@+id/today_calor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:gravity="top"
        android:text="@string/today_calor"
        android:textAppearance="@style/title1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Summary Card -->

    <View
        android:id="@+id/summary_card"
        android:layout_width="376dp"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_calor" />

    <TextView
        android:id="@+id/kcal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="top"
        android:text="@string/kcal"
        android:textAppearance="@style/card_text"
        app:layout_constraintBottom_toBottomOf="@+id/summary_card"
        app:layout_constraintEnd_toEndOf="@+id/summary_card"
        app:layout_constraintStart_toStartOf="@+id/summary_card"
        app:layout_constraintTop_toTopOf="@+id/summary_card" />

    <TextView
        android:id="@+id/you_re_doin"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="top"
        android:text="@string/you"
        android:textAppearance="@style/card_text"
        app:layout_constraintBottom_toBottomOf="@+id/summary_card"
        app:layout_constraintEnd_toEndOf="@+id/summary_card"
        app:layout_constraintStart_toStartOf="@+id/summary_card"
        app:layout_constraintTop_toBottomOf="@+id/kcal" />

    <View
        android:id="@+id/lastest_food"
        android:layout_width="376dp"
        android:layout_height="160dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/card"
        app:layout_constraintEnd_toEndOf="@+id/summary_card"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/summary_card"
        app:layout_constraintTop_toBottomOf="@+id/summary_card" />

    <TextView
        android:id="@+id/your_latest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:text="@string/your_lastest_food"
        android:textAppearance="@style/card2_title"
        app:layout_constraintStart_toStartOf="@+id/lastest_food"
        app:layout_constraintTop_toTopOf="@+id/lastest_food" />

    <ImageView
        android:id="@+id/food_image"
        android:layout_width="72dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/foto_makanan"
        app:layout_constraintCircleRadius="20dp"
        app:layout_constraintStart_toStartOf="@+id/lastest_food"
        app:layout_constraintTop_toBottomOf="@+id/your_latest"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/food_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/card_text"
        android:text="@string/food"
        app:layout_constraintStart_toEndOf="@+id/food_image"
        app:layout_constraintTop_toTopOf="@+id/food_image" />

    <TextView
        android:id="@+id/total_kcal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/card_text"
        android:text="@string/_125_2000_kcal"
        app:layout_constraintStart_toEndOf="@+id/food_image"
        app:layout_constraintTop_toBottomOf="@+id/food_title" />

    <TextView
        android:id="@+id/articles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="top"
        android:text="@string/articles"
        android:textAppearance="@style/title1"
        app:layout_constraintStart_toStartOf="@+id/today_calor"
        app:layout_constraintTop_toBottomOf="@+id/lastest_food" />

    <ImageView
        android:id="@+id/article_image"
        android:layout_width="0dp"
        android:layout_height="184dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/articel_image"
        app:layout_constraintCircleRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/articles"
        tools:srcCompat="@color/card_color" />

    <TextView
        android:id="@+id/article_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/apa_sih_kalori_dan_berapa_yang_kita_butuhkan"
        android:textColor="@color/white"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="@+id/article_image"
        app:layout_constraintEnd_toEndOf="@+id/article_image"
        app:layout_constraintStart_toStartOf="@+id/article_image" />
   </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>